welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: reassignment to val
  if (vuBiscuit = true){
                ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit = true){
  ^Program:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Biscuit!=0){
  ^